[package]
authors = ["Lana Ivina lanaconstanceives@gmail.com"]
description = 'Pallet for file signatures'
edition = '2018'
homepage = 'https://evercity.io'
license = 'Apache-2.0'
name = 'pallet-audit'
readme = '../README.md'
repository = 'https://github.com/EvercityEcosystem/filesign'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0.124'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.impl-trait-for-tuples]
version = "0.1.3"

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
serde_json = {version = "1.0"}

[dev-dependencies]
sp-core = {  version = '3.0.0' }
pallet-balances = { version = '3.0.0' }
rand = { version = '0.6' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-api/std',
    'sp-core/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-timestamp/std',
]
